# qmlplayground

./: .gitignore  README.md
DeferredSpotShadow/: CubeMesh.qml  DeferredRenderer.qml  DeferredScene.qml  DeferredSpotShadow  DeferredSpotShadow.pro  DeferredSpotShadow.qrc  DynamicCreation.js  FinalEffect.qml  Fixture3DItem.qml  FixtureSpotLight.qml  GBuffer.qml  GenericMesh.qml  SceneEffect.qml  SceneEntity.qml  ScreenQuadEntity.qml  SelectionEntity.qml  ShadowMapEffect.qml  SpotLightMesh.qml  SpotLightShadowRenderTarget.qml  StaticSpotLight.qml  final_gl3.frag  main.cpp  main.qml  mainview3d.cpp  mainview3d.h
DeferredSpotShadow/shaders/: deferred.frag  deferred_gl2.frag
ForwardSpot/: Fixture3DItem.qml  ForwardSpot.pro  ForwardSpot.qrc  main.cpp  main.qml  mainview3d.cpp  mainview3d.h  moving_head.dae
QmlRhiPipeline/: .gitignore  CMakeLists.txt  README.md  build-win.sh  cube.h  main.cpp  main.qml  rhiqmlitem.cpp  rhiqmlitem.h
QmlRhiPipeline/qml/: Main.qml  SidePanel.qml  ViewGizmo.qml
QmlRhiPipeline/shaders/: debug_bounds.frag  debug_bounds.vert  gbuffer.frag  gbuffer.vert  gizmo.frag  gizmo.vert  light_cull.comp  lighting.frag  lighting.vert  lighting_cull.frag  lighting_cull_d3d.frag  lighting_cull_metal.frag  lighting_d3d.frag  lighting_metal.frag  post_bloom_downsample.frag  post_bloom_upsample.frag  post_combine.frag  scene_pass.frag  scene_pass.vert  selection_box.frag  selection_box.vert  shadow.frag  shadow.vert  shadow_spot.frag  spot_depth_debug.frag  spot_view.frag  spot_view.vert  tonemap.frag
QmlRhiPipeline/src/: main.cpp
QmlRhiPipeline/src/core/: RenderGraph.cpp  RenderGraph.h  RenderTargetCache.cpp  RenderTargetCache.h  RhiContext.cpp  RhiContext.h  ShaderManager.cpp
QmlRhiPipeline/src/qml/: BeamBarItem.cpp  BeamBarItem.h  CameraItem.cpp  CameraItem.h  CubeItem.cpp  CubeItem.h  HazerItem.cpp  HazerItem.h  LightItem.cpp  LightItem.h  MeshItem.cpp  MeshItem.h  MeshUtils.cpp  MeshUtils.h  ModelItem.cpp  ModelItem.h  MovingHeadItem.cpp  MovingHeadItem.h  PickingUtils.cpp  PickingUtils.h  PixelBarItem.cpp  PixelBarItem.h  RhiQmlItem.cpp  RhiQmlItem.h  SphereItem.cpp  SphereItem.h  StaticLightItem.cpp  StaticLightItem.h  VideoItem.cpp  VideoItem.h
QmlRhiPipeline/src/renderer/: DeferredRenderer.cpp  DeferredRenderer.h  PassDepth.cpp  PassDepth.h  PassGBuffer.cpp  PassGBuffer.h  PassLightCulling.cpp  PassLightCulling.h  PassLighting.cpp  PassLighting.h  PassPost.cpp  PassPost.h  PassShadow.cpp  PassShadow.h
QmlRhiPipeline/src/scene/: AssimpLoader.cpp  AssimpLoader.h  Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h
TreeView/: LeafDelegate.qml  NodeDelegate.qml  TreeUtils.js  TreeView.pro  TreeView.qml  app.cpp  app.h  main.cpp  qml.qrc
hundred-lights/: AnimatedEntity.qml  SceneEntity.qml  ScreenQuadEntity.qml  SphereEntity.qml  final_gl3.frag  hundred-lights.pro  hundred-lights.qrc  main.qml
